[gd_scene load_steps=21 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://ui/radar/radar.tscn" type="PackedScene" id=2]
[ext_resource path="res://camera/camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/player-stats/player-stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/theme/fonts/PixelOperator.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ships/modules/mining-laser/mining-laser.tscn" type="PackedScene" id=7]
[ext_resource path="res://ships/animations/thrust.tres" type="Animation" id=8]
[ext_resource path="res://ships/animations/idle.tres" type="Animation" id=9]
[ext_resource path="res://ships/modules/shield/shield.tscn" type="PackedScene" id=10]
[ext_resource path="res://ships/modules/pulse-laser/pulse-laser.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=6]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Animations/BackwardPlume:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "thrust"
length = 0.1
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Animations/BackwardPlume:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("LeftPlume:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "thrust"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("LeftPlume:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("RightPlume:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "thrust"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("RightPlume:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 4000.0

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="Player" type="RigidBody2D" groups=["player"]]
z_index = 2
mass = 20000.0
contacts_reported = 4
contact_monitor = true
can_sleep = false
angular_damp = 30.0
script = ExtResource( 1 )
points = PoolVector2Array( -20, 0, -12, -16, 28, 0, -12, 16, -20, 0 )

[node name="PulseLaser" parent="." instance=ExtResource( 11 )]

[node name="MiningLaser" parent="." instance=ExtResource( 7 )]
show_behind_parent = true

[node name="Shield" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Animations" type="Node2D" parent="."]
show_behind_parent = true

[node name="ForwardThrust" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
anims/idle = ExtResource( 9 )
anims/thrust = ExtResource( 8 )

[node name="ForwardPlume" type="Polygon2D" parent="Animations"]
visible = false
position = Vector2( 4, 0 )
polygon = PoolVector2Array( -16, -8, -32, 0, -16, 8 )

[node name="BackwardThrust" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
anims/idle = SubResource( 6 )
anims/thrust = SubResource( 7 )

[node name="BackwardPlume" type="Node2D" parent="Animations"]
visible = false

[node name="BackwardPlumeL" type="Polygon2D" parent="Animations/BackwardPlume"]
position = Vector2( 4, 0 )
polygon = PoolVector2Array( -6, -12, 16, -8, -6, -4 )

[node name="BackwardPlumeR" type="Polygon2D" parent="Animations/BackwardPlume"]
position = Vector2( 4, 0 )
polygon = PoolVector2Array( -6, 4, 16, 8, -6, 12 )

[node name="LeftThrust" type="AnimationPlayer" parent="Animations"]
anims/idle = SubResource( 8 )
anims/thrust = SubResource( 9 )

[node name="LeftPlume" type="Polygon2D" parent="Animations"]
visible = false
polygon = PoolVector2Array( -4, -8, 0, -20, 4, -8 )

[node name="RightThrust" type="AnimationPlayer" parent="Animations"]
anims/idle = SubResource( 10 )
anims/thrust = SubResource( 11 )

[node name="RightPlume" type="Polygon2D" parent="Animations"]
visible = false
polygon = PoolVector2Array( -4, 8, 0, 20, 4, 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -20, 0, -12, -16, 28, 0, -12, 16 )

[node name="Camera" parent="." instance=ExtResource( 3 )]
zoom_max = 6.0

[node name="Scanner" type="Area2D" parent="."]
visible = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scanner"]
shape = SubResource( 3 )

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="Radar" parent="UI" instance=ExtResource( 2 )]

[node name="PlayerStats" parent="UI" instance=ExtResource( 5 )]
margin_left = 0.0
margin_top = 264.0
margin_bottom = 476.0
mouse_filter = 2
theme = SubResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_entered" from="Scanner" to="." method="_on_Scanner_body_entered"]
[connection signal="body_exited" from="Scanner" to="." method="_on_Scanner_body_exited"]
